# tangerine

./: .gitignore  README.md  pyproject.toml
preprocess/: args.py  atac_coverage.py  find_motifs.py  main.py  utils.py
qsub_outs/: mm10_gas.txt  run.txt
tangerine/: __main__.py  find_motifs.py  main.py  run_many_umaps.py  tangerine_pipeline.py  utils.py
tangerine/preprocess/: find_motifs.py  generate_bed.py  inference.py  main.py  metacells.py  motifs.py  pipeline.py
tangerine/visualise/: app.py  data_loader.py  main.py  utils.py
tutorial/: quick_start_tutorial.ipynb
visualise/: app.py  data_loader.py  main.py
