[project]
name = "tangerine"
version = "0.1.0"
description = "Use single cell transcriptomic time series data to quantify TF-gene regulation"
authors = [
    {name = "Tanmayee Narendra",email = "n.tanmayee@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scanpy (>=1.11.4,<2.0.0)",
    "python-igraph (>=0.11.9,<0.12.0)",
    "leidenalg (>=0.10.2,<0.11.0)",
    "typer (>=0.19.2,<0.20.0)",
    "pysam (==0.22)",
    "htseq (>=2.0.5,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "dash (>=3.2.0,<4.0.0)",
    "gimmemotifs (>=0.18.0,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
